# dice_game

./: LICENSE  dice_game.py  pyproject.toml
src/: dice_class.py
