[tool.poetry]
name = "dice-game"
version = "0.1.0"
description = "A game about rolling dice"
authors = ["Isaac Wines <isaacjwines@yahoo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
